--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Meu Portfólio</title>
+    <title>Portifólio Enzo Hora</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
     <!-- navbar -->
     <header id="navbar">
       <img src="img/shuriken.png" alt="Estrela Ninja">
-      <h2>Matheus Battisti</h2>
+      <h2>Enzo Hora</h2>
       <nav>
         <ul id="navbar-list">
           <li><a href="#">Sobre</a></li>
@@ -25,9 +25,9 @@
       <!-- banner início -->
       <div id="main-banner">
         <div id="banner-info">
-          <h1>Olá, eu sou Matheus Battisti</h1>
+          <h1>Olá, eu sou Enzo Hora</h1>
           <img src="img/ninja.png" alt="Perfil Ninja">
-          <p>O ninja da programação</p>
+          <p>O ninja da Arte - Desenhos e Espadas Samurais</p>
         </div>
       </div>
       <!-- banner fim -->
@@ -96,7 +96,7 @@
         <textarea name="msg" placeholder="Digite uma mensagem"></textarea>
         <input type="submit" value="Enviar">
       </form>
-      <p>Desenvolvido por <span class="detail">Matheus Battisti - Hora de Codar</span></p>
+      <p>Desenvolvido por <span class="detail">Cezar Hora - Cezar DEV</span></p>
     </footer>
     <!-- footer fim -->
   </body>
